--- a/app/less/mobile/modules/media.less
+++ b/app/less/mobile/modules/media.less
@@ -21,6 +21,18 @@
     min-width: 75px;
 }
 
+.media-menu {
+    .align-self(center);
+    position: static;
+    min-width: 10px;
+
+    .btn-context {
+        .opacity(1);
+        .rotate(0deg);
+        height: 30px;
+    }
+}
+
 .img-user {
     .size(30px, auto);
     margin-right: 10px;
